--- a/index.html
+++ b/index.html
@@ -39,11 +39,19 @@
                     COMPRAR AGORA
                 </a>
                 <a href="" class="button play">
-                    <span>
-                        <img src="assets/icons/play.svg" alt="">
+                    <span class="shadow">
+                        <img src="assets/icons/play.svg" alt="" >
                     </span>
                     VEJA EM AÇÃO
                 </a>
+            </div>
+        </div>
+        <div>
+            <div class="content">
+                <img src="assets/hero/ellipse.svg" alt="">
+                <img src="assets/hero/patins-image.png" alt="">
+                <img src="assets/hero/stars-1.svg" alt="">
+                <img src="assets/hero/stars-2.svg" alt="">
             </div>
         </div>
     </section>
